Projekt/k8s/frontend-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-lb
  namespace: miniapp
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
